force-app/main/default/objects/Contract_APO__c/Contract_APO__c.object-meta.xml
<CustomObject>
    <description>junction between Contract and APO</description>
    <label>Contract APO</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Contract APO ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract APOs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>