force-app/main/default/objects/Contract_APO__c/fields/Account_Premise_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Account_Premise_Ownership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Premise Ownership</label>
    <referenceTo>Account_Premise_Ownership__c</referenceTo>
    <relationshipLabel>Contract APOs</relationshipLabel>
    <relationshipName>Contract_APOs</relationshipName>
    <type>Lookup</type>
</CustomField>