force-app/main/default/objects/Contract_APO__c/fields/GEM_DealSheet_ID__c.field-meta.xml
<CustomField>
    <fullName>GEM_DealSheet_ID__c</fullName>
    <description>External DealSheetID to CRES GEM System</description>
    <inlineHelpText>External DealSheetID to CRES GEM System</inlineHelpText>
    <label>GEM DealSheet ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>