force-app/main/default/objects/Contract_APO__c/fields/Meter_Number__c.field-meta.xml
<CustomField>
    <fullName>Meter_Number__c</fullName>
    <formula>Account_Premise_Ownership__r.Premise__r.Meter_Number__c</formula>
    <label>Meter Number</label>
    <type>Text</type>
</CustomField>