force-app/main/default/objects/Contract_APO__c/fields/Premise_Name__c.field-meta.xml
<CustomField>
    <fullName>Premise_Name__c</fullName>
    <formula>Account_Premise_Ownership__r.Premise__r.Premise_Nickname__c</formula>
    <label>Premise Name</label>
    <type>Text</type>
</CustomField>