force-app/main/default/objects/Contract_APO__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <formula>TEXT(Account_Premise_Ownership__r.Premise__r.Zone__c)</formula>
    <label>Zone</label>
    <type>Text</type>
</CustomField>